Updating acceptable bindings in ContainerApp files.

--- a/atm-locator/.tanzu/config/atm-locator.yml
+++ b/atm-locator/.tanzu/config/atm-locator.yml
@@ -5,7 +5,7 @@ metadata:
   name: atm-locator
 spec:
   acceptedServiceBindings:
-  - name: registry
+  - name: eureka
     types:
     - eureka
   - name: config
