--- a/branch/.tanzu/config/branch.yml
+++ b/branch/.tanzu/config/branch.yml
@@ -5,12 +5,9 @@ metadata:
   name: branch
 spec:
   acceptedServiceBindings:
-  - name: registry
+  - name: eureka
     types:
     - eureka
-  - name: config
-    types:
-    - config
   build:
     nonSecretEnv:
     - name: BP_JVM_VERSION
