Adding local registry script.  Updating service binding doc for TP4K8s

--- a/atm-locator/src/main/resources/application.yaml
+++ b/atm-locator/src/main/resources/application.yaml
@@ -44,7 +44,7 @@ eureka:
 ---
 
 spring:
-  config.activate.on-cloud-platform: none
+  config.activate.on-profile: local
   
 services:
   location-transation:
